Corrected header layput spacing

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -16,7 +16,7 @@ $indented-lists: false !default;
 
 $header-font-size: 1em !default;
 $header-padding-top: 1.5em !default;
-$header-padding-bottom: 1.5em !default;
+$header-padding-bottom: 0.7em !default;
 
 .group { @include pie-clearfix; }
 
