--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -38,6 +38,7 @@ body > header {
     font-family: "Courier New", Courier, monospace;
     font-weight: normal;
     font-size: 1.2em;
+    margin-left: -8px;
   }
   h2 {
     margin: -1.4em 0 0;
